# atari-tools

./: .gitignore  CMakeLists.txt  LICENCE  Makefile  Makefile.win  atr.c  atr2imd.c  detok.c  imd2atr.c  readme.md
